# platformer_with_level_editor

./: Cargo.toml  README.md  build_for_deployment.sh
.github/ISSUE_TEMPLATE/: bug_report.md  internal.md  player-story.md
.github/workflows/: deploy-linux.yml  deploy-macos.yml  deploy-windows.yml  deploy.yml  test_and_build.yml
src/: audio_manager.rs  command.rs  image_manager.rs  level_manager.rs  lib.rs  main.rs
src/draw_systems/: mod.rs  title_screen_draw_system.rs
src/events/: event.rs  mod.rs
src/helpers/: game_entity.rs  get_resource.rs  mod.rs  query_camera.rs  query_end.rs  query_platforms.rs  query_player.rs
src/input_handler/: edit_level_input_handler.rs  level_select.rs  mod.rs  play_input_handler.rs  settings.rs  title_screen.rs
src/level_manager/: level.rs  mod.rs
src/loaders/: edit_scene.rs  insert_into_world.rs  mod.rs  play.rs  select_level.rs  select_level_loader.rs  settings.rs  title_screen.rs  title_screen_loader.rs  won_loader.rs
src/names/: component_names.rs  entity_states.rs  mod.rs  resource_names.rs
src/navigation/: mod.rs  screens.rs
src/states/: navigation.rs
src/system_manager/: apply_friction_system.rs  apply_gravity.rs  camera.rs  collide_with_end.rs  collide_with_platform.rs  display_collision_border_system.rs  draw_editing_level.rs  draw_entities.rs  draw_selectable_text.rs  draw_text.rs  editing_level_system.rs  jump_system.rs  mod.rs  move_player.rs  update_camera_position.rs  update_forces.rs  update_selected.rs  update_state_system.rs  update_text.rs
