[package]
name = "platformer_with_level_editor"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
eyre = "0.6.5"
bbecs = "0.3.0"
crossbeam = "0.8.0"
strum = "0.20.0"
strum_macros = "0.20.1"
rand = "0.8.3"